[package]
name = "code-analysis"
version = "0.1.0"
authors = ["Victor I. Afolabi <javafolabi@gmail.com>"]
edition = "2021"
description = "Reports comprehensive code analysis on your project"
readme = "README.md"
repository = "https://github.com/victor-iyi/code-analysis"
license = "MIT"
keywords = ["code-analysis"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
thiserror = "1.0.38"
walkdir = "2.3.2"

[badges]
maintenance = { status = "actively-developed" }
